--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<head>
-    <title>
-        <%= title %>
-    </title>
-</head>
-<body>
-    Codeial/ <%= title %>
-</body>
-</html>
+
+    <h1>Codeial/ <%= title %> </h1>
+   
