Added authentication module for the user sign out and sign in

--- a/views/usersProfile.ejs
+++ b/views/usersProfile.ejs
@@ -1,3 +1,5 @@
     <link rel="stylesheet" href="/user_profile.css">
     <h1> A Users profile Page</h1>
+    <p><%= locals.user.name%></p>
+    <p><%= locals.user.email%></p>
         
