--- a/views/userSignin.ejs
+++ b/views/userSignin.ejs
@@ -1,7 +1,7 @@
 <h1>Codeial/ User Sign In Page</h1>
 
-<form action='/user-create-session' method="POST">
-    <input type="text" name="Email" placeholder="Email" required=true/>
+<form action='/users/user-create-session' method="POST">
+    <input type="text" name="email" placeholder="Email" required=true/>
     <input type="password" name="password" placeholder="password" required=true/>
 <button type="submit">Login</button>
 </form>
