--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,10 +2,54 @@
     <h1>Codeial/ <%= title %> </h1>
 
     <section id="feed-posts">
+
         <h4>Posts</h4>
+        <% if(locals.user){%>
         <form action="/posts/create" method="POST" id="new-post-form">
             <textarea name="content" cols="30" rows="3" placeholder="Type here.."></textarea>
             <input type="submit" value="Post"/>
         </form>
+        <%}%>
+        <div id="posts-container">
+
+            <ul>
+                    <% for (post of posts) {%>
+                        
+                        <li>
+                            <p><%= post.content %></p>
+                            <small><%= post.user.name %></small>
+
+                            <% if(locals.user) {%>
+                                <div class="comments-container">  
+                                   <form action="/comments/create" method="POST">
+                                
+                                        <input type="text" name="content" placeholder="Type in your comment here"/> 
+                                        <input type="hidden"  name="post" value="<%= post._id%>"/>
+                                        <input type="submit" value="Add Comment"/>  
+                                    </form> 
+                                 
+                                </div>
+                                <%}%>
+
+                            <% for (comment of post.comments) {%>
+                                <ul>
+                           <li>
+
+                           <div class="comment-container">
+                                <p><%=comment.content %></p>
+                                <small><%=comment.user.name %></small>
+                                <br>
+                                
+                            </div>
+                        </li> 
+                                </ul>
+                            <%}%>
+                        </li>
+                        <%}%>
+                        
+
+                
+            </ul>
+        </div>
     </section>
    
