--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,9 +1,10 @@
 
     <h1>Codeial/ <%= title %> </h1>
-
+    
     <section id="feed-posts">
 
         <h4>Posts</h4>
+        <h1>locals: <%=locals%></h1>
         <% if(locals.user){%>
         <form action="/posts/create" method="POST" id="new-post-form">
             <textarea name="content" cols="30" rows="3" placeholder="Type here.."></textarea>
@@ -11,51 +12,20 @@
         </form>
         <%}%>
         <div id="posts-container">
-
             <ul>
-                    <% for (post of posts) {%>
-                        
-                        <li>
-                               
-                            <%if(locals.user._id == post.user.id){%>
-                                    <a href="/posts/destroy/<%= post.id%>">X</a>
-                                    <%}%>
-                            
-                          
-                            <p><%= post.content %></p>
-                            <small><%= post.user.name %></small>
-
-                            <% if(locals.user) {%>
-                                <div class="comments-container">  
-                                   <form action="/comments/create" method="POST">
-                                
-                                        <input type="text" name="content" placeholder="Type in your comment here"/> 
-                                        <input type="hidden"  name="post" value="<%= post._id%>"/>
-                                        <input type="submit" value="Add Comment"/>  
-                                    </form> 
-                                 
-                                </div>
-                                <%}%>
-
-                            <% for (comment of post.comments) {%>
-                                <ul>
-                           <li>
-
-                           <div class="comment-container">
-                                <p><%=comment.content %></p>
-                                <small><%=comment.user.name %></small>
-                                <br>
-                                
-                            </div>
-                        </li> 
-                                </ul>
-                            <%}%>
-                        </li>
-                        <%}%>
-                        
-
-                
+                    <% for (post of posts) {%>  
+                        <%- include('_post') -%>
+                    <%}%>   
             </ul>
         </div>
+    </section>
+
+    <section id="user-freinds">
+        <h4>Freinds</h4>
+        <% for(u of all_users) {%>
+            <p>
+                <a href="/users/profile/<%= u.id%>"><%=u.name%></a>
+            </p>
+        <%}%>
     </section>
    
