--- a/views/usersProfile.ejs
+++ b/views/usersProfile.ejs
@@ -1,5 +1,19 @@
     <link rel="stylesheet" href="/user_profile.css">
-    <h1> A Users profile Page</h1>
-    <p><%= locals.user.name%></p>
-    <p><%= locals.user.email%></p>
-        
+    <p>user id:  <%= console.log(user.id)%></p>
+    <p>profile user id: <%= console.log(profile_user.id)%></p>
+
+    <% if(user.id==profile_user.id){%>
+        <form action="/users/update/<%= profile_user.id%>"  method="POST">
+            <input type="text" name="name" placeholder="Your name" value="<%=profile_user.name%>" required/>
+            <input type="text" name="email" placeholder="Your email" value="<%=profile_user.email%>" required/>
+            <input type="submit" value="Update"/>
+        </form>
+
+    <%} else {%>
+        <h1> A Users profile Page</h1>
+        <p><%= profile_user.name%></p>
+        <p><%= profile_user.email%></p>
+     <%}%>   
+
+
+     
