--- a/views/usersProfile.ejs
+++ b/views/usersProfile.ejs
@@ -1,10 +1,12 @@
     <link rel="stylesheet" href="/user_profile.css">
 
 
+    <img src = <%=user.avatar%> alt="<%= user.name %>" width="100"/>
     <% if(user.id == profile_user.id){%>
-        <form action="/users/update/<%= profile_user.id%>"  method="POST">
+        <form action="/users/update/<%= profile_user.id%>"  enctype="multipart/form-data" method="POST"">
             <input type="text" name="name" placeholder="Your name" value="<%=profile_user.name%>" required/>
             <input type="text" name="email" placeholder="Your email" value="<%=profile_user.email%>" required/>
+            <input type="file" name="avatar" placeholder="profile pic"/>
             <input type="submit" value="Update"/>
         </form>
 
